Bootstrap CSS and JS implemented and homepage looks nice

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,6 @@
+$body-bg:		#35cf76;
+$navbar-inverse-bg: #27ae60;
+$navbar-inverse-link-color: white;
+$brand-primary: #3498db;
+$jumbotron-bg: #f1c40f;
 @import 'bootstrap';
