--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-default">
+<nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
   <div class="container">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -19,8 +19,14 @@
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Team", team_path %></li>
           <% if user_signed_in? %>
+            <li>
+              <%= link_to new_pin_path do%>
+                <button type="button" class="btn btn-primary btn-md">
+                  <span class="glyphicon glyphicon-plus"></span> New Pin
+                </button>
+              <% end %>
+            </li>
             <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-            <li><%= link_to 'New Pin', new_pin_path %></li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to "Sign in", new_user_session_path %></li>
