Added pagination to pins index

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,5 +1,4 @@
-<%= render 'pages/home' unless user_signed_in %>
-
+<!-- <%= render 'pages/home' unless user_signed_in %> -->
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
@@ -20,4 +19,7 @@
       </div>
     </div>
   <% end %>
+</div>
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
 </div>
