--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,5 @@
-<!-- <%= render 'pages/home' unless user_signed_in %> -->
+
+<%= render 'pages/home' unless user_signed_in? %> 
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
